feat: estrutura do react js

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Github Explorer</title>
 </head>
 <body>
-    
+    <id id="root"></id>
+    <script src="../dist/bundle.js" ></script>
 </body>
 </html>
